src/styles/app.css
@import 'tailwindcss' source('../');

@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentcolor);
  }
}

@layer base {
  html {
    color-scheme: light dark;
  }

  * {
    @apply border-gray-200 dark:border-gray-800;
  }

  html,
  body {
    @apply text-gray-900 bg-gray-50 dark:bg-gray-950 dark:text-blue-200;
  }

  input {
    @apply text-gray-600;
  }

  .using-mouse * {
    outline: none !important;
  }
}

